hello amazing sci-tech world

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <title>hello world</title>
+    <title>hello amazing sci-tech world</title>
 
     <!-- Oh! Why should the spirit of mortal be proud? -->
     <style>
