--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
         .column {
-            float: left;    
+            float: left;    tri
         }
 
         .column_reverse {
@@ -159,16 +159,7 @@
     <p> </p>
 
     <br>
-      
-    <p>What Will Happen in the Next 100 Trillion Years?</p>
-
-    <video src="This Is What Will Happen in the Next 100 Trillion Years.mp4" controls>
-    <p>If you are reading this, it is because your browser does not support the video element.</p>
-    </video>
-    <p></p>
-    <br>
-    <p></p>
-    <br>
+     
     <p>Anqing, Anhui--My Birthplace and China's Hometown of Huangmei Opera</p>
 
 
