--- a/index.html
+++ b/index.html
@@ -70,7 +70,12 @@
   
 <body>
 
-    <a style="font-size: 30px;" href="https://YekaiLiu.github.io/aboutme.github.io/">About me </a>
+    <a style="font-size: 30px;" href="http://www.liuyekai.com/about_me//">About me </a>
+   
+    
+    <a style="font-size: 30px;" href="http://www.liuyekai.com/typehead_suggestion_highlight_google_map_usa_states/">a simple web project </a>
+ 
+    
     <h2>a world with science and technology</h2>
  
     <h2>a world with mortal spirits but great minds</h2>
