--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </p>
    
     
-    <a style="font-size: 30px;" href="http://www.liuyekai.com/typehead_suggestion_highlight_google_map_usa_states/">a simple web project </a>
+    <a style="font-size: 30px;" href="http://www.liuyekai.com/typehead_suggestion_highlight_google_map_usa_states/">A web development project </a>
  
     
     <h2>a world with science and technology</h2>
