--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
+
 <head>
+
+    <link rel="stylesheet" href="style.css">
     <title>hello sci-tech world</title>
    
 
@@ -78,7 +81,7 @@
     </p>
    
     
-    <a style="font-size: 30px;" href="http://www.liuyekai.com/typehead_suggestion_highlight_google_map_usa_states/">A web development project </a>
+    <a style="font-size: 20px;" href="http://www.liuyekai.com/typehead_suggestion_highlight_google_map_usa_states/">A web development project </a>
  
     
     <h2>a world with science and technology</h2>
