--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   
 <body>
 
-    <a style="font-size: 20px;" href="http://www.liuyekai.com/about_me//">About me </a>
+    <a style="font-size: 20px;" href="http://www.liuyekai.com/about_me/">About me </a>
     
     <br>
     <p>
