--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
   
     <br>
 
-    <a style="font-size: 20px;" href="https://YekaiLiu.github.io/aboutme.github.io/">About me </a>
+    <a style="font-size: 20px;" href="http://www.liuyekai.com/about_me/">About me</a>
 
 
 
